--- a/src/index.css
+++ b/src/index.css
@@ -211,3 +211,19 @@ body {
         height: 36px;
     }
 }
+
+.smooth-transition {
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.border-gold {
+  border-color: #FFD700;
+}
+
+.border-silver {
+  border-color: #C0C0C0;
+}
+
+.border-bronze {
+  border-color: #CD7F32;
+}
